# idos-nx

./: Cargo.toml  Makefile
api/src/: compat.rs
api/src/io/: termios.rs
api/src/syscall/: exec.rs  io.rs  memory.rs  mod.rs  pci.rs
components/drivers/fatdriver/src/: dir.rs
components/drivers/floppy/: Cargo.toml
components/drivers/floppy/src/: controller.rs  dma.rs  geometry.rs  main.rs  port.rs
components/drivers/sb16/: Cargo.toml
components/drivers/sb16/src/: dsp.rs  main.rs  mixer.rs
components/programs/command/src/: exec.rs  main.rs
components/programs/doslayer/src/: bios.rs  dos.rs  dpmi.rs  graphics.rs  main.rs  memory.rs
components/programs/gfx/src/: main.rs
components/programs/netcat/src/: main.rs
components/programs/tonegen/: Cargo.toml
components/programs/tonegen/src/: main.rs
e1000/: Cargo.toml
e1000/src/: controller.rs  driver.rs  main.rs
kernel/src/: config.rs  log.rs  main.rs
kernel/src/console/: input.rs  mod.rs
kernel/src/console/console/: mod.rs
kernel/src/console/driver/: mod.rs
kernel/src/console/graphics/: mod.rs
kernel/src/console/manager/: decor.rs  hit.rs  mod.rs  scrollbar.rs  topbar.rs  ui.rs
kernel/src/hardware/: mod.rs  rtc.rs
kernel/src/hardware/com/: driver.rs  serial.rs
kernel/src/interrupts/: exceptions.rs  idt.rs  pic.rs  syscall.rs
kernel/src/io/filesystem/: fatfs.rs  sysfs.rs
kernel/src/io/provider/: message.rs  task.rs
kernel/src/net/: netdevice.rs  resident.rs
kernel/src/task/: state.rs
kernel/src/time/: date.rs  system.rs
resources/: DRIVERS.CFG
userdata/: ticktest.asm
(+7 files in other folders)
