[workspace]

members = [
  "api",
  "bootloader/bootbin",
  "bootloader/mbr",
  "components/drivers/testdriver",
  "components/programs/colordemo",
  "components/programs/command",
  "components/programs/diskchk",
  "components/programs/doslayer",
  "components/programs/elfload",
  "components/programs/gamedemo",
  "components/programs/gfx",
  "components/programs/gopher",
  "components/programs/netcat",
  "e1000",
  "fatdriver",
  "kernel",
  "libc",
  "sdk",
  "tools/logview",
]
