[workspace]

members = [
  "api",
  "bootloader/bootbin",
  "bootloader/mbr",
  "components/drivers/e1000",
  "components/drivers/fatdriver",
  "components/drivers/floppy",
  "components/drivers/sb16",
  "components/programs/colordemo",
  "components/programs/command",
  "components/programs/diskchk",
  "components/programs/doslayer",
  "components/programs/elfload",
  "components/programs/gamedemo",
  "components/programs/gfx",
  "components/programs/gopher",
  "components/programs/netcat",
  "components/programs/tonegen",
  "kernel",
  "libc",
  "sdk",
  "tools/logview",
]

[workspace.dependencies]
idos_api = { path = "api" }
idos_sdk = { path = "sdk" }
